flapivor/tests/m3/hopix/typechecker/good/39-pattern-matching-03.hopix
type C = A | B

val main : Int = case A<> { A<> => 0 | B<> => 1 }