flapivor/tests/m3/hopix/typechecker/bad/53-constructor-matching-01.hopix
type T = A

val main : Int = case A<> { B<> => 0 }